overview: Fix bug with close button showing up when tapping with 2nd finger.

Test: manual
Bug: 872106
Change-Id: I7c1e1f7f29ed1fac749b0ed5808d7f753cad7de5
Reviewed-on: https://chromium-review.googlesource.com/1179973
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584104}