ash/wm/overview/window_selector_item.cc
@@ -819,10 +819,10 @@ void WindowSelectorItem::ActivateDraggedWindow() {
 }
 
 void WindowSelectorItem::ResetDraggedWindowGesture() {
-  OnSelectorItemDragEnded();
   if (!IsDragItem())
     return;
 
+  OnSelectorItemDragEnded();
   window_selector_->ResetDraggedWindowGesture();
 }
 
